--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ span{
      justify-content: center;
       align-items: center;
       text-align: center;
-      margin-top: 50px;
+      /* margin-top: 50px; */
       padding-left: auto;
       padding-right: 50px;
     
